Tweaking readme and adding data model glossary item.